# condo_rag

./: .gitignore  pyproject.toml
src/condo_rag/: ingest.py  main.py  qa.py
tests/: conftest.py  test_ingest.py  test_qa.py
